--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 	},
 	"dependencies": {
 		"@tailwindcss/vite": "^4.1.13",
+		"marked": "^17.0.0",
 		"sweetalert2": "^11.26.3",
 		"tailwindcss": "^4.1.13"
 	}
